[package]
name = "cord-client"
description = "Cord Client."
version = '0.8.0'
authors = ['Dhiway <info@dhiway.com>',]
edition = '2021'
license = "GPL-3.0"
homepage = "https://cord.network"
repository = "https://github.com/dhiway/cord"

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
frame-benchmarking = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
frame-benchmarking-cli = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
pallet-transaction-payment = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
frame-system = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
frame-system-rpc-runtime-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }

sp-consensus = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sp-storage = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sp-runtime = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sp-blockchain = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sp-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sp-core = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sp-keyring = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sp-inherents = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sp-timestamp = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sp-session = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sp-authority-discovery = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sp-consensus-grandpa = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sp-consensus-babe = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sp-transaction-pool = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sp-block-builder = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }

sc-consensus = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sc-executor = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sc-client-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.41" }
sc-service = { git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.41" }


# Cord dependencies
cord-runtime = { path = "../../runtime", optional = true }
cord-primitives = { path = "../../primitives" }
pallet-extrinsic-authorship = { package = "pallet-extrinsic-authorship", path = "../../pallets/authorship" }
pallet-did-runtime-api = { package = "pallet-did-runtime-api", path = "../../pallets/did/runtime-api" }


[features]
default = ["cord"]
cord = ["cord-runtime"]

