[package]
name = "cord-client"
description = "Cord Client."
version = "0.8.1"
authors = ['Dhiway <info@dhiway.com>']
edition = '2021'
license = "GPL-3.0"
homepage = "https://cord.network"
repository = "https://github.com/dhiway/cord"

[dependencies]
futures = "0.3.21"
frame-benchmarking = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
frame-benchmarking-cli = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
frame-system = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
frame-system-rpc-runtime-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }

sp-consensus = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-storage = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-runtime = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-blockchain = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-core = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-keyring = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-inherents = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-timestamp = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-session = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-authority-discovery = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-consensus-grandpa = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-consensus-babe = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-transaction-pool = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sp-block-builder = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-executor = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-client-api = { git = "https://github.com/dhiway/substrate", branch = "release-v0.9.43" }
sc-service = { git = "https://github.com/dhiway/substrate", default-features = false, branch = "release-v0.9.43" }


# Cord dependencies
cord-runtime = { path = "../../runtime", optional = true }
cord-primitives = { path = "../../primitives/cord" }
pallet-network-membership = { package = "pallet-network-membership", path = "../../pallets/network-membership" }
pallet-did-runtime-api = { package = "pallet-did-runtime-api", path = "../../runtime-api/did" }
pallet-transaction-weight-runtime-api = { package = "pallet-transaction-weight-runtime-api", path = "../../runtime-api/weight", default-features = false }

[features]
default = ["cord"]
cord = ["cord-runtime"]
