[package]
name = "cord-client"
description = "Cord Client."
version = "0.9.0"
authors = ['Dhiway <info@dhiway.com>']
edition = '2021'
license = "GPL-3.0"
homepage = "https://cord.network"
repository = "https://github.com/dhiway/cord"

[dependencies]
futures = "0.3.21"
frame-benchmarking = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
frame-benchmarking-cli = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
frame-system = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }

sp-consensus = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sp-storage = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sp-runtime = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sp-blockchain = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sp-api = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sp-core = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sp-keyring = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sp-inherents = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sp-timestamp = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sp-session = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sp-authority-discovery = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sp-consensus-grandpa = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sp-consensus-babe = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sp-transaction-pool = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sp-block-builder = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sc-executor = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sc-client-api = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.1.0" }
sc-service = { git = "https://github.com/dhiway/substrate-sdk", default-features = false, branch = "release-v1.1.0" }


# Cord dependencies
cord-runtime = { path = "../../runtime", optional = true }
cord-primitives = { path = "../../primitives/cord" }
pallet-network-membership = { package = "pallet-network-membership", path = "../../pallets/network-membership" }
pallet-did-runtime-api = { package = "pallet-did-runtime-api", path = "../../runtime-api/did" }
pallet-transaction-weight-runtime-api = { package = "pallet-transaction-weight-runtime-api", path = "../../runtime-api/weight", default-features = false }

[features]
default = ["cord"]
cord = ["cord-runtime"]
