[package]
name = 'cord-rpc'
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
jsonrpsee = { version = "0.22", features = ["server"] }
cord-primitives = { package = "cord-primitives", path = "../../primitives/cord" }
sc-chain-spec = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sc-client-api = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sc-consensus-babe = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sc-consensus-babe-rpc = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sc-consensus-grandpa = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sc-consensus-grandpa-rpc = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sc-rpc = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sc-rpc-api = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sc-rpc-spec-v2 = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sc-sync-state-rpc = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sc-transaction-pool-api = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sp-api = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sp-block-builder = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sp-blockchain = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sp-consensus = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sp-consensus-babe = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sp-keystore = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
sp-runtime = { git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
state-trie-migration-rpc = { package = "substrate-state-trie-migration-rpc", git = "https://github.com/dhiway/substrate-sdk", branch = "release-v1.10.0" }
