[package]
name = 'cord-node-rpc'
description = "CORD node RPC methods."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
jsonrpsee = { features = ["server"], workspace = true }
cord-primitives = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-chain-spec = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus-babe = { workspace = true }
sc-consensus-babe-rpc = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-consensus-grandpa-rpc = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-rpc-spec-v2 = { workspace = true }
sc-sync-state-rpc = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
substrate-state-trie-migration-rpc = { workspace = true }
